--- a/app/index.html
+++ b/app/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset='utf-8'>
     <meta name='viewport' content='width=device-width, initial-scale=1'>
-    <title>Dharmadict over ReactJS Login Flow</title>
+    <title>Dharmadict</title>
   </head>
   <body>
     <div id='app'></div>
