--- a/prod/client/index.html
+++ b/prod/client/index.html
@@ -1,1 +1,1 @@
-<!DOCTYPE html><html lang="en"><head><meta charset="utf-8"><meta name="viewport" content="width=device-width,initial-scale=1"><title>Dharmadict over ReactJS Login Flow</title></head><body><div id="app"></div><script type="text/javascript" src="js/bundle.js"></script></body></html>
+<!DOCTYPE html><html lang="en"><head><meta charset="utf-8"><meta name="viewport" content="width=device-width,initial-scale=1"><title>Dharmadict</title></head><body><div id="app"></div><script type="text/javascript" src="js/bundle.js"></script></body></html>
