--- a/app/index.html
+++ b/app/index.html
@@ -1,14 +1,14 @@
 <!doctype html>
-<html lang='en'>
+<html lang="en">
   <head>
     <base href="/">
-    <meta charset='utf-8'>
-    <meta name='viewport' content='width=device-width, initial-scale=1'>
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Dharmadict</title>
     <link rel="shortcut icon" href="favicon.ico">
-    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/latest/css/bootstrap.min.css">
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
   </head>
   <body>
-    <div id='app'></div>
+    <div id="app"></div>
   </body>
 </html>
